@@ -1,5 +1,12 @@
 Fixes and Enhancements since Version 0.5 alpha 3
 
+ - Added 'peak.running.options', a new option-parsing framework that extends
+   'optparse' to support the PEAK 'commands' framework.  Command instances
+   can now refer to 'self.parsed_args' to find their non-option arguments,
+   and to trigger setting of their attributes (or calling of methods) based on
+   their raw arguments from 'self.argv'.  See 'options.txt' in the
+   'peak.running' package directory for a complete tutorial.
+   
  - There is now a 'binding.initAttrs()' function that can be used to initialize
    an object's attributes from e.g. constructor keyword arguments, similar to
    how 'binding.Component' and 'binding.Attribute' constructors work.
